2007-01-12 Alexander Malysh <amalysh at kannel.org>
   * gwlib/gwmem-native.c: reverted last Stipe's commit. It doesn do anything usefull.

2007-01-22  Stipe Tolj  <stolj at kannel.org>
   * gwlib/gwmem-native.c: segfault prevention by setting all free()ed 
     pointers to NULL. This follows the secure coding principles of CERT-CC.
     A non NULLed pointer may be containing bogus after free() and a redo
     of gw_free() and hence free() will lead to segfault eventually.
     
2007-01-22  Stipe Tolj  <stolj at kannel.org>
   * gwlib/dbpool_sqlite.c: remove gw_free() in sqlite_close_conn(), since
     sqlite's sqlite_close() will give a bogus pointer and we segfault.
   * gwlib/dbpool_sqlite3.c: same as above, also fix a deadlock while closing
     connection due to typo in while break condition.
   * test/test_dbpool.c: add sqlite3 sections to the test
   
2007-01-22  Stipe Tolj  <stolj at kannel.org>
    * test/test_charset.c: simple test checking GSM->UTF-8->GSM conversion.

2007-01-14 Alexander Malysh <amalysh at kannel.org>
    * gw/bb_smscconn.c: set smsc_running = 0 in smsc2_cleanup instead in
      router thread because so we never call smsc2_cleanup.
    * gwlib/cfg.c: fixed memleak. we should consider moving hooks to Cfg struct.

2007-01-11  Stipe Tolj  <stolj at kannel.org>
    * gwlib/cfg.def: adds config directive 'dlr-url' to smsc group to allow
      DLR bridging via HTTP SMSC type 'kannel' connections.
    * gw/smsc/smsc_http.c: adding generic DLR handling for type 'kannel',
      which allows point-to-point DLR forwarding though the whole kannel 
      instance chain. Uses 'dlr-url' to identify the DLR inbound port to the
      next kannel instance in chain.
      
2007-01-09  Stipe Tolj  <stolj at kannel.org>
    * test/decode_emimsg.c: adding a simple tool that decodes a EMI/UCP stream
      PDU and prints more readable informations about it. Thanks to Vincent.
      [Msg-Id: <1ad701c6e08d$88bee420$9600a8c0@vince>]
    